fixed width on firefox

--- a/src/app/products/car-owners.component.css
+++ b/src/app/products/car-owners.component.css
@@ -20,6 +20,10 @@ label {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+table {
+  width: 100%;
+}
+
 th {
   font-size: 14px;
   font-weight: bold;
